working-on-the-header

--- a/src/assets/Style/brandColors.scss
+++ b/src/assets/Style/brandColors.scss
@@ -1,7 +1,7 @@
 /**********************************************************************/
 
 // Color Cube // 
-$White: #ffffff;
+$white: #ffffff;
 $woodsmoke: #111117;
 $blueLagoon:#038484;
 $gravel:#504f51;
