--- a/src/assets/Style/brandColors.scss
+++ b/src/assets/Style/brandColors.scss
@@ -1,6 +1,8 @@
 /**********************************************************************/
 
-// Color Cube // 
+
+/*Color Cube*/
+
 $white: #ffffff;
 $woodsmoke: #111117;
 $blueLagoon:#038484;
@@ -12,7 +14,9 @@ $anakiwa: #8fffff;
 
 /**********************************************************************/
 
-// Median Cut //
+
+/* Median Cut */
+
 $shark: #1d2023;
 $grayNurse: #eef1ed;
 $seaNymph: #6ca0a0;
@@ -21,7 +25,9 @@ $medianSantaFe: #a96b53;
 
 /**********************************************************************/
 
-// Material Design  //
+
+/* Material Design  */
+
 $elm:#1c918e;
 $materialSantaFe:#ab6b53;
 $bigStone:#122439;
